front end dps da landing page

--- a/FRONT-END/acomss/responsavel/index_resp.html
+++ b/FRONT-END/acomss/responsavel/index_resp.html
@@ -4,12 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Login Gestão</title>
+  <title>Login Responsável</title>
   <link href="http://fonts.cdnfonts.com/css/oleo-script" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Karla:400,700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.materialdesignicons.com/4.8.95/css/materialdesignicons.min.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-  <link rel="stylesheet" href="/gestao/gestao.css">
+  <link rel="stylesheet" href="/acomss/responsavel/resp.css">
 </head>
 <body>
   <main class="d-flex align-items-center min-vh-100 py-3 py-md-0">
@@ -20,14 +20,14 @@
 
           <div class="col-md-5">
             <div class="texto">
-              <h1>VOCÊ ESTÁ LOGANDO COMO GESTÃO!</h1>
+              <h1>VOCÊ ESTÁ LOGANDO COMO RESPONSÁVEL!</h1>
           </div>
-            <img src="/images/gestao.svg" alt="login" class="login-card-img">
+            <img src="/acomss/images/resp.svg" alt="login" class="login-card-img">
           </div>
           <div class="col-md-7">
             <div class="card-body">
               <div class="brand-wrapper">
-                <img src="/images/removebglogo.png" alt="logo" class="logo">
+                <img src="/acomss/images/removebglogo.png" alt="logo" class="logo">
               </div>
               <form action="#!">
                   <div class="form-group">
@@ -60,6 +60,6 @@
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
-  <script src="/gestao/gestao.js"></script>
+  <script src="/responsavel/resp.js"></script>
 </body>
 </html>
