--- a/FRONT-END/acomss/selecionar_login/indexx.html
+++ b/FRONT-END/acomss/selecionar_login/indexx.html
@@ -3,37 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/selecionar_login/csss.css">
+    <link rel="stylesheet" href="/acomss/selecionar_login/csss.css">
     <title>Selecione o login</title>
 </head>
 <body>
   <h1> SELECIONE SUA OPÇÃO DE LOGIN:</h1>   
     <div class="container">
         <div class="card">
-          <img src="/images/prof2.png" alt="Person" class="card__image">
+          <img src="/acomss/images/prof2.png" alt="Person" class="card__image">
           <p class="card__name">Professor(a)</p>
-          <a href="/prof/index_prof.html">
+          <a href="/acomss/prof/index_prof.html">
           <button class="btn draw-border">ENTRAR</button>
         </a>
         </div>
         <div class="card">
-          <img src="/images/responsa2.png" alt="Person" class="card__image">
+          <img src="/acomss/images/responsa2.png" alt="Person" class="card__image">
           <p class="card__name">Responsável</p> 
-          <a href="/responsavel/index_resp.html">        
+          <a href="/acomss/responsavel/index_resp.html">        
           <button class="btn draw-border">ENTRAR</button>
         </a>
         </div>
         <div class="card">
-          <img src="/images/aluno2.png" alt="Person" class="card__image">
+          <img src="/acomss/images/aluno2.png" alt="Person" class="card__image">
           <p class="card__name">Aluno(a)</p>
-          <a href="/aluno/index_aluno.html">
+          <a href="/acomss/aluno/index_aluno.html">
           <button class="btn draw-border">ENTRAR</button>
         </a>
         </div>
         <div class="card">
-          <img src="/images/escola.png" alt="Person" class="card__image">
+          <img src="/acomss/images/escola.png" alt="Person" class="card__image">
           <p class="card__name">Coordenação</p>
-          <a href="/gestao/index_gestao.html">
+          <a href="/acomss/gestao/index_gestao.html">
           <button class="btn draw-border">ENTRAR</button>
         </a>
         </div>
