refactor and add integration

--- a/FRONT-END/acomss/gestao/index_gestao.html
+++ b/FRONT-END/acomss/gestao/index_gestao.html
@@ -29,7 +29,7 @@
               <div class="brand-wrapper">
                 <img src="/acomss/images/removebglogo.png" alt="logo" class="logo">
               </div>
-              <form action="#!">
+              <form action="/schoolLogin" method="post" class="loginRequest">
                   <div class="form-group">
                     <div class="select">
                       <select>
@@ -39,8 +39,8 @@
                       </select>
                       <div class="select_arrow"></div>
                       </div>
-                    <label for="cpf" class="sr-only">cpf</label>
-                    <input type="email" name="cpf" id="cpf" class="form-control" maxlength="14"  autocomplete="off" onkeyup="mascara_cpf()" placeholder="INSIRA O SEU CPF AQUI">
+                    <label for="username" class="sr-only">cpf</label>
+                    <input type="email" name="username" id="cpf" class="form-control" maxlength="14"  autocomplete="off" onkeyup="mascara_cpf()" placeholder="INSIRA O SEU CPF AQUI">
                   </div>
                   <div class="form-group mb-4">
                     <label for="password" class="sr-only">Password</label>
@@ -48,7 +48,7 @@
                     <input type="checkbox" onclick="myFunction()">Mostrar a senha
                   </div>
                   <p class="login-card-footer-text">Não consegue logar? <a href="#!" class="text-reset">Clique aqui</a></p>
-                  <input name="login" id="login" class="btn btn-block login-btn mb-4" type="button" value="ENTRAR">
+                  <input name="login" id="login" class="btn btn-block login-btn mb-4" type="submit" value="ENTRAR">
                 </form>
             </div>
           </div>
@@ -60,6 +60,7 @@
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
-  <script src="/gestao/gestao.js"></script>
+  <script src="/acomss/gestao/gestao.js"></script>
+  <script src="/integrationFile/integration.js"></script>
 </body>
 </html>
