--- a/FRONT-END/acomss/responsavel/userpageresponsavel/profilepage.html
+++ b/FRONT-END/acomss/responsavel/userpageresponsavel/profilepage.html
@@ -8,13 +8,15 @@
     <title>Document</title>
 
     <link rel="stylesheet" href="profilepage.css">
-    <link rel="stylesheet" href="botstrap/assets/dist/css/bootstrap.min.css">
+    <!-- <link rel="stylesheet" href="botstrap/assets/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="botstrap/assets/dist/css/bootstrap.min.css.map">
     <link rel="stylesheet" href="botstrap/assets/dist/css/bootstrap.rtl.min.css">
     <link rel="stylesheet" href="botstrap/assets/dist/css/bootstrap.rtl.min.css.map">
     <link rel="stylesheet" href="botstrap/assets/brand/bootstrap-logo-white.svg">
-    <link rel="stylesheet" href="botstrap/assets/brand/bootstrap-logo.svg">
-
+    <link rel="stylesheet" href="botstrap/assets/brand/bootstrap-logo.svg"> -->
+    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js" integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script> -->
 </head>
 
 <body id="body">
