Updated url naming convention

--- a/FRONT-END/landing page final/index.html
+++ b/FRONT-END/landing page final/index.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>ACOM.S</title>
   <!-- Text font -->
-  <link rel="stylesheet" href="/landing page final/navbar.css">
-  <link rel="stylesheet" href="/landing page final/css.css" />
+  <link rel="stylesheet" href="/FRONT-END/landing page final/navbar.css">
+  <link rel="stylesheet" href="/FRONT-END/landing page final/css.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link
@@ -20,7 +20,7 @@
 <body>
 
   <header>
-    <img src="/landing page final/imgs/logoresizenome (1).png" alt="brand">
+    <img src="/FRONT-END/landing page final/imgs/logoresizenome (1).png" alt="brand">
     <div class="menu">
       <div class="btn">
         <i class="fas fa-times close-btn"></i>
@@ -28,9 +28,9 @@
       <a href="#">Início</a>
       <a href="#key-benefits">Avaliações</a>
       <a href="#details">Vantagens</a>
-      <a href="/planos/index.html">Preços</a>
-      <a href="/acomss/selecionar_login/indexx.html">Entrar</a>
-      <a href="/planos/index.html">Cadastrar</a>
+      <a href="/FRONT-END/planos/index.html">Preços</a>
+      <a href="/FRONT-END/acomss/selecionar_login/indexx.html">Entrar</a>
+      <a href="/FRONT-END/planos/index.html">Cadastrar</a>
     </div>
     <div class="btn">
       <i class="fas fa-bars menu-btn"></i>
@@ -40,9 +40,6 @@
     <h1>BEM VINDO AO <h3>ACOM.S</h3>
     </h1>
   </section>
-
-
-
   <section id="key-benefits">
     <h2>O que nossos clientes dizem:</h2>
     <div class="benefits">
@@ -74,7 +71,7 @@
   <br>
   <section id="details">
     <div class="detail" id="detail-1">
-      <img src="/landing page final/imagem/teacher.jpg" alt="" />
+      <img src="/FRONT-END/landing page final/imagem/teacher.jpg" alt="" />
       <div class="detail-description">
         <h3>Conheça as vantagens do sistema ACOM.S</h3>
       </div>
@@ -90,10 +87,10 @@
           <li>E muito mais!</li>
         </ul>
       </div>
-      <img src="/landing page final/imagem/pais.jpg" alt="" />
+      <img src="/FRONT-END/landing page final/imagem/pais.jpg" alt="" />
     </div>
     <div class="detail" id="detail-3">
-      <img src="/landing page final/imagem/online.jpg" alt="" />
+      <img src="/FRONT-END/landing page final/imagem/online.jpg" alt="" />
       <div class="detail-description">
         <h3>Para a escola</h3>
         <ul>
@@ -109,7 +106,7 @@
   </section>
   <section id="cta">
     <h3>Gostou? Então inscreva sua instituição:</h3>
-    <button onclick="location.href='/planos/index.html'" class="btn">Solicitar Inscrição</button>
+    <button onclick="location.href='/FRONT-END/planos/index.html'" class="btn">Solicitar Inscrição</button>
   </section>
   <footer id="footer">
     <h3>ACOM.S</h3>
