--- a/acoms/paginas/responsavel/responsavel.html
+++ b/acoms/paginas/responsavel/responsavel.html
@@ -51,9 +51,9 @@
               <img src="https://www.bootdey.com/img/Content/avatar/avatar1.png" alt="Admin" class="rounded-circle"
                 width="150">
               <div class="mt-3">
-                <h4>Silvio Cesar Lopes</h4>
+                <h4 class="guardianName">nenhum usuario logado</h4>
                 <b class="text-secondary mb-1" font="black">Responsável</b>
-                <p class="text-muted font-size-sm">ETEC Prof. Armando josé Farinazzo</p>
+                <p class="schoolName text-muted font-size-sm">nenhum usuario logado</p>
                 <button class="btn btn-primary">Follow</button>
                 <button class="btn btn-outline-primary">Message</button>
               </div>
