added favicon and preload

--- a/acoms/paginas/landingpage/landingpage.html
+++ b/acoms/paginas/landingpage/landingpage.html
@@ -2,10 +2,12 @@
 <html lang="en">
 
 <head>
+  <link rel="icon" href="/img/logomarca.png">
+
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>ACOMs</title>
   <!--Text font-->
   <link rel="stylesheet" href="/paginas/landingpage/landingpage.css">
   <link rel="stylesheet" href="/paginas/landingpage/landingpage-navbar.css">
@@ -22,6 +24,7 @@
 </head>
 
 <body>
+  <script src="/integrationFile/waitLoad.js"></script>
 
   <header>
     <img src="/paginas/landingpage/img/logofull.png" alt="brand" id="logofull">
