--- a/acoms/paginas/login-select/loginpage.html
+++ b/acoms/paginas/login-select/loginpage.html
@@ -2,6 +2,8 @@
 <html lang="en">
 
 <head>
+  <link rel="icon" href="/img/logomarca.png">
+
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -43,6 +45,7 @@
 
 
 <body>
+  <script src="/integrationFile/waitLoad.js"></script>
 
   <a href="/paginas/landingpage/landingpage.html">
   <button class="button button2">&laquo; VOLTAR</button>
