--- a/acoms/paginas/cadastro/cadastrar_escola/cadastrarescola.html
+++ b/acoms/paginas/cadastro/cadastrar_escola/cadastrarescola.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="icon" href="/img/logomarca.png">
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,6 +13,8 @@
 
 </head>
 <body>
+  <script src="/integrationFile/waitLoad.js"></script>
+
     <form action="#" class="form" id="forms" onsubmit="event.preventDefault()">
       
     
