--- a/acoms/paginas/evento/evento.html
+++ b/acoms/paginas/evento/evento.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="icon" href="/img/logomarca.png">
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -18,6 +20,7 @@
 
 </head>
 <body id="body">
+  <script src="/integrationFile/waitLoad.js"></script>
 
 
     <header>
