--- a/acoms/paginas/planos/planos.html
+++ b/acoms/paginas/planos/planos.html
@@ -2,6 +2,8 @@
 <html lang="en">
 
 <head>
+    <link rel="icon" href="/img/logomarca.png">
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,6 +17,7 @@
 </head>
 
 <body>
+    <script src="/integrationFile/waitLoad.js"></script>
 
     <header>
         <img src="/paginas/landingpage/img/logofull.png" alt="brand" id="logofull">
