--- a/acoms/chat/chat.html
+++ b/acoms/chat/chat.html
@@ -22,12 +22,12 @@
                 <i class='bx bx-message-dots'></i>
             </div>
             <div class="chatbox-message-wrapper">
-                <div class="chatbox-message-header">
+                <div class="chatbox-message-header" style="background-image: linear-gradient(to right, #4562cc, #089bdf);">
                     <div class="chatbox-message-profile">
-                        <img src="JACKIECHAN.jpg" alt="" class="chatbox-message-image">
+                        <img src="/chat/JACKIECHAN.jpg" alt="" class="chatbox-message-image">
                         <div>
-                            <h4 class="chatbox-message-name">Coordenador</h4>
-                            <p class="chatbox-message-status">online</p>
+                            <h4 class="chatbox-message-name" style="color: white;">Coordenador</h4>
+                            <p class="chatbox-message-status" style="color: white;">online</p>
                         </div>
                     </div>
                     <div class="chatbox-message-dropdown">
@@ -58,10 +58,10 @@
                     <span class="chatbox-message-item-time">08:30</span>
                 </div> -->
                 </div>
-                <div class="chatbox-message-bottom">
+                <div class="chatbox-message-bottom" style="background-image: linear-gradient(to right, #4562cc, #089bdf);">
                     <form action="#" class="chatbox-message-form">
-                        <textarea rows="1" placeholder="Escreva uma mensagem..." class="chatbox-message-input" cols="50"
-                            id="usermsg"></textarea>
+                        <textarea rows="1" placeholder="Escreva uma mensagem..." class="chatbox-message-input"
+                            cols="50" id="usermsg"></textarea>
                         <button type="submit" class="chatbox-message-submit"><i class='bx bx-send'></i></button>
                     </form>
                 </div>
