--- a/acoms/paginas/login/login_professor/loginprofessor.html
+++ b/acoms/paginas/login/login_professor/loginprofessor.html
@@ -21,7 +21,7 @@
 						<h3>LOGAR</h3>
 						<input type="text" placeholder="RM DE PROFESSOR">
 						<input type="text" placeholder="SENHA">
-						<button class="submit">ENTRAR</button>
+						<button formaction="/paginas/professor/professor.html" class="submit">ENTRAR</button>
 					</form>
 				</div>
 			</div>
