--- a/acoms/paginas/responsavel/responsavelperfil.html
+++ b/acoms/paginas/responsavel/responsavelperfil.html
@@ -31,11 +31,10 @@
       <div class="btn">
         <i class="fas fa-times close-btn"></i>
       </div>
-      <a href="/paginas/responsavel/responsavel.html">INICIO</a>
-      <a href="#vantagens">COMUNICADOS</a>
-      <a href="/paginas/calendario/calendario.html">CALENDÁRIO</a>
-      <a href="/paginas/evento/evento.html">EVENTOS</a>
-      <a href="/paginas/login/login_responsavel/loginresponsavel.html">SAIR</a>
+      <a href="/paginas/responsavel/responsavel.html">Início</a>
+      <a href="/paginas/comunicados/comunicados.html">Comunicados</a>
+      <a href="/paginas/comunicacao_coordenacao/comunicacaocoordenacaoresponsavel.html">Coordenação</a>
+      <a href="/paginas/login/login_responsavel/loginresponsavel.html">Sair</a>
     </div>
     <div class="btn">
       <i class="fas fa-bars menu-btn"></i>
