--- a/acoms/paginas/boletim/boletim.html
+++ b/acoms/paginas/boletim/boletim.html
@@ -48,17 +48,15 @@
         <div class="card">
           <div class="card-body">
             <div class="d-flex flex-column align-items-center text-center">
-              <img src="https://www.bootdey.com/img/Content/avatar/avatar6.png" alt="Admin" class="rounded-circle"
-                width="150">
-              <div class="mt-3">
-                <h4>Roberto</h4>
+              <img src="https://www.bootdey.com/img/Content/avatar/avatar6.png" alt="Admin" class="rounded-circle" width="150">
+              <div class="mt-3" style="font-size: 16px;">
+                <h4 style="font-size: 24px;">Roberto</h4>
                 <b class="text-secondary mb-1" font="black">Aluno</b> <br>
                 <b class="text-secondary mb-1" font="black">Vinculado ao responsável: Silvio</b>
                 <p class="text-muted font-size-sm">ETEC Prof. Armando josé Farinazzo</p>
                 <p class="text-muted font-size-sm">RM: 12345</p>
                 <p class="text-muted font-size-sm">Série: 3° ano</p>
-                <button class="btn btn-primary">Editar Perfil</button>
-                <button formaction="/paginas/boletim/boletim.html" class="btn btn-outline-primary">Ver Boletim</button>
+                <button class="btn btn-primary" style="font-size: 16px; padding: 5px 13px 5px 13px;">Editar Perfil</button>
               </div>
             </div>
           </div>
@@ -69,12 +67,8 @@
         <div class="mb">
 
           <div class="card mb-3" id="div-informacao">
-            <style>
-              html {
-                font-family: arial;
-                font-size: 18px;
-              }
 
+            <style>
               h2 {
                 margin-left: 10%;
                 text-align: center;
@@ -82,7 +76,7 @@
 
               td {
                 border: 2px solid rgb(0, 0, 0);
-                padding: 17px;
+                padding: 19px;
               }
 
               thead {
@@ -106,11 +100,10 @@
               }
             </style>
 
-            <head>
-              <h2> BOLETIM ATUAL: </h2>
-            </head>
-
             <body>
+
+              <h2> BOLETIM ATUAL </h2>
+
               <table>
                 <thead>
                   <tr>
@@ -167,14 +160,9 @@
               </table>
             </body>
 
-
           </div>
 
-
-
-
         </div>
-
 
       </div>
     </div>
