--- a/acoms/paginas/calendario/calendario.html
+++ b/acoms/paginas/calendario/calendario.html
@@ -60,20 +60,17 @@
                 <div class="card">
                     <div class="card-body">
                         <div class="d-flex flex-column align-items-center text-center">
-                            <img src="https://www.bootdey.com/img/Content/avatar/avatar6.png" alt="Admin"
-                                class="rounded-circle" width="150">
-                            <div class="mt-3">
-                                <h4>Roberto</h4>
-                                <b class="text-secondary mb-1" font="black">Aluno</b> <br>
-                                <b class="text-secondary mb-1" font="black">Vinculado ao responsável: Silvio</b>
-                                <p class="text-muted font-size-sm">ETEC Prof. Armando josé Farinazzo</p>
-                                <p class="text-muted font-size-sm">RM: 12345</p>
-                                <p class="text-muted font-size-sm">Série: 3° ano</p>
-                                <button class="btn btn-primary">Editar Perfil</button>
-                                <button onclick="location.href='/paginas/boletim/boletim.html'"
-                                    class="btn btn-outline-primary">Ver Boletim</button>
+                            <img src="https://www.bootdey.com/img/Content/avatar/avatar6.png" alt="Admin" class="rounded-circle" width="150">
+                            <div class="mt-3" style="font-size: 16px;">
+                              <h4 style="font-size: 24px; font-weight: 600">Roberto</h4>
+                              <b class="text-secondary mb-1" font="black">Aluno</b> <br>
+                              <b class="text-secondary mb-1" font="black">Vinculado ao responsável: Silvio</b>
+                              <p class="text-muted font-size-sm">ETEC Prof. Armando josé Farinazzo</p>
+                              <p class="text-muted font-size-sm">RM: 12345</p>
+                              <p class="text-muted font-size-sm">Série: 3° ano</p>
+                              <button class="btn btn-primary" style="font-size: 16px; padding: 5px 13px 5px 13px;">Editar Perfil</button>
                             </div>
-                        </div>
+                          </div>
                     </div>
                 </div>
             </div>
