--- a/acoms/paginas/professor/professor.html
+++ b/acoms/paginas/professor/professor.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Área do responsável</title>
 
-  <link rel="stylesheet" href="/paginas/responsavel/responsavel.css">
+  <link rel="stylesheet" href="/paginas/professor/professor.css">
   <link rel="stylesheet" href="/paginas/navbar/navbar.css">
 
   <link rel="stylesheet" href="/bootstrap/assets/dist/css/bootstrap.min.css">
@@ -31,10 +31,12 @@
       <div class="btn">
         <i class="fas fa-times close-btn"></i>
       </div>
-      <a href="/paginas/responsavel/responsavel.html">Início</a>
-      <a href="/paginas/comunicados/comunicados.html">Comunicados</a>
-      <a href="/paginas/comunicacao_coordenacao/comunicacaocoordenacaoresponsavel.html">Coordenação</a>
-      <a href="/paginas/login/login_responsavel/loginresponsavel.html">Sair</a>
+      <a href="/paginas/professor/professor.html">Inicio</a>
+      <a href="/paginas/comunicacao_coordenacao/comunicacaocoordenacao.html">Coordenação</a>
+      <a href="/paginas/cadastro/cadastrar_evento/cadastrarevento.html">Criar Evento</a>
+      <a href="/paginas/cadastro/cadastrar_presenca/cadastrarpresenca.html">Presença</a>
+      <a href="/paginas/cadastro/cadastrar_nota/cadastrarnota.html">Notas</a>
+      <a href="/paginas/login/login_professor/loginprofessor.html">Sair</a>
     </div>
     <div class="btn">
       <i class="fas fa-bars menu-btn"></i>
@@ -48,11 +50,11 @@
         <div class="card">
           <div class="card-body">
             <div class="d-flex flex-column align-items-center text-center">
-              <img src="https://www.bootdey.com/img/Content/avatar/avatar1.png" alt="Admin" class="rounded-circle"
+              <img src="https://www.bootdey.com/img/Content/avatar/avatar7.png" alt="Admin" class="rounded-circle"
                 width="150">
               <div class="mt-3">
-                <h4>Silvio Cesar Lopes</h4>
-                <b class="text-secondary mb-1" font="black">Responsável</b>
+                <h4>Mascos Antonio</h4>
+                <b class="text-secondary mb-1" font="black">Professor</b>
                 <p class="text-muted font-size-sm">ETEC Prof. Armando josé Farinazzo</p>
                 <button class="btn btn-primary"
                   onclick="location.href='/paginas/responsavel/responsavelperfil.html'">Perfil</button>
@@ -63,6 +65,9 @@
       </div>
 
       <div class="col-md-8">
+
+
+        <!--Colocar dentro do for:each-->
 
         <div class="mb">
 
@@ -80,38 +85,22 @@
 
               <div class="pb-3 mb-0 small lh-sm border-bottom w-100">
                 <div class="d-flex justify-content-between">
-                  <strong class="text-gray-dark">Roberto</strong>
-                  <button class="btn btn-primary" id="visualizar"
-                    onclick="location.href='/paginas/aluno/aluno.html'">Visualizar</button>
+                  <strong class="text-gray-dark" style="font-size: 25px;">3° Infonet</strong>
+                  <div class="profile-image"><img class="rounded-circle">
+                    <button class="btn btn-primary" onclick="location.href='/paginas/cadastro/cadastrar_presenca/cadastrarpresenca.html'">Presença</button>
+                    <button class="btn btn-primary" onclick="location.href='/paginas/cadastro/cadastrar_nota/cadastrarnota.html'">Nota</button>
                 </div>
-                <span class="d-block">Série: 9° ano - Escola: ETEC Fernandópolis</span>
-              </div>
-            </div>
-          </div>
-
-          <div class="card mb-3" id="div-informacao">
-
-            <div class="d-flex text-muted pt-3">
-
-              <svg class="bd-placeholder-img flex-shrink-0 me-2 rounded" width="32" height="32"
-                xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 32x32"
-                preserveAspectRatio="xMidYMid slice" focusable="false">
-                <title>Placeholder</title>
-                <rect width="100%" height="100%" fill="#007bff" /><text x="50%" y="50%" fill="#007bff"
-                  dy=".3em">32x32</text>
-              </svg>
-
-              <div class="pb-3 mb-0 small lh-sm border-bottom w-100">
-                <div class="d-flex justify-content-between">
-                  <strong class="text-gray-dark">Maria</strong>
-                  <button class="btn btn-primary" id="visualizar"
-                    onclick="location.href='/paginas/aluno/aluno.html'">Visualizar</button>
                 </div>
-                <span class="d-block">Série: 1° ano - Escola: ETEC Fernandópolis</span>
               </div>
             </div>
           </div>
         </div>
+
+        
+
+        <!--fim for:each-->
+
+        
 
       </div>
 
