--- a/acoms/paginas/calendario/calendario.html
+++ b/acoms/paginas/calendario/calendario.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <link rel="icon" href="/img/logomarca.png">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -32,7 +33,7 @@
 </head>
 
 <body id="body">
-
+    <script src="/integrationFile/waitLoad.js"></script>
     <header id="cabeca">
         <img src="/img/logofull.png" alt="brand" id="logofull">
         <div class="menu">
