--- a/acoms/paginas/planos/planos.html
+++ b/acoms/paginas/planos/planos.html
@@ -2,8 +2,6 @@
 <html lang="en">
 
 <head>
-    <link rel="icon" href="/img/logomarca.png">
-
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,14 +10,13 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
 
     <link rel="stylesheet" href="/paginas/planos/planos.css">
-    <link rel="stylesheet" href="/paginas/planos/planos-navbar.css">
+    <link rel="stylesheet" href="/paginas/navbar/navbar.css">
 
 </head>
 
 <body>
-    <script src="/integrationFile/waitLoad.js"></script>
 
-    <header>
+    <header id="cabeca">
         <img src="/paginas/landingpage/img/logofull.png" alt="brand" id="logofull">
         <div class="menu">
             <div class="btn">
