--- a/acoms/paginas/landingpage/landingpage.html
+++ b/acoms/paginas/landingpage/landingpage.html
@@ -3,11 +3,10 @@
 
 <head>
   <link rel="icon" href="/img/logomarca.png">
-
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ACOMs</title>
+  <title>Document</title>
   <!--Text font-->
   <link rel="stylesheet" href="/paginas/landingpage/landingpage.css">
   <link rel="stylesheet" href="/paginas/landingpage/landingpage-navbar.css">
@@ -25,6 +24,12 @@
 
 <body>
   <script src="/integrationFile/waitLoad.js"></script>
+  <!-- <a href="">aaaa</a> -->
+
+  <!-- <h1>teste</h1> -->
+
+  <!-- <h2>teste2</h2> -->
+
 
   <header>
     <img src="/paginas/landingpage/img/logofull.png" alt="brand" id="logofull">
@@ -45,8 +50,9 @@
   </header>
 
   <section class="section-main">
-    <h1>BEM VINDO AO <h3>ACOM.S</h3>
-    </h1>
+    <h1>BEM VINDO AO</h1>
+    <p style="opacity: 0;">a</p>
+    <h3>ACOM.S</h3>
   </section>
 
   <section id="key-benefits">
